# trainer

./: .gitignore  DEVELOPMENT_GUIDE.md  README.md  SCRAPING_GUIDE.md  YAHOO_FINANCE_SCRAPING_INSTRUCTIONS.md  index.html
_dev/data-retriever/: README.md  api_service.py  pyproject.toml  run_api.sh  run_tests.sh
_dev/data-retriever/examples/: basic_usage.py
_dev/data-retriever/src/data_retriever/: __init__.py  base.py  cache.py  metrics.py  schema.py
_dev/data-retriever/src/trainer_data_retriever.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
_dev/data-retriever/tests/: README.md  __init__.py  test_api_retriever.py  test_base.py  test_cache.py  test_file_retriever.py  test_schema.py
_dev/data-store/: .env.example  INTEGRATION.md  MONGODB_STRUCTURE.md  PORTFOLIO_ANALYSIS.md  README.md  README_MONGODB.md  api_service.py  pyproject.toml  run_api.sh  run_tests.sh  setup_mongodb.sh
_dev/data-store/data/: bulk_example.db  example.db  freshness_example.db  integration.db  trainer.db  ttl_example.db
_dev/data-store/examples/: basic_usage.py  embeddings_explanation.md  integration_with_modules.py  mongodb_json_storage.py
_dev/data-store/examples/etl/: README.md  __init__.py  file_poller.py  mock_db_extractor.py  simple_pipeline.py  visualize_pipeline.py
_dev/data-store/src/data_store/: __init__.py  base.py  config.py  metrics.py  models.py  registry.py
_dev/data-store/tests/: __init__.py  test_base.py  test_metrics.py  test_models.py  test_registry.py  test_sqlite_store.py
_dev/format-converter/: README.md  api_service.py  pyproject.toml  run_tests.sh
_dev/format-converter/data/: integration_test.db
_dev/format-converter/examples/: README.md  basic_usage.py  integration_all_modules.py  view_html_from_db.py
_dev/format-converter/src/format_converter/: __init__.py  converter.py  detector.py  metrics.py
_dev/format-converter/src/trainer_format_converter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
_dev/format-converter/tests/: __init__.py  test_converter.py  test_detector.py  test_json_to_markdown.py  test_markdown_to_html.py  test_markdown_to_json.py  test_metrics.py
_dev/llm-provider/: EXAMPLES_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  README.md  RUN_TESTS.md  TEST_RESULTS.md  api_service.py  pyproject.toml  run_api.sh  run_tests.sh
_dev/llm-provider/examples/: README.md  all_providers.py  basic_usage.py  cloud_providers.py  configuration_example.py  integration_full_workflow.py  integration_prompt_manager.py  integration_prompt_security.py  integration_security.py  multiple_providers.py  registry_usage.py
_dev/llm-provider/src/llm_provider/: __init__.py  base.py  config.py  litellm_wrapper.py  registry.py  utils.py
_dev/llm-provider/src/trainer_llm_provider.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
_dev/llm-provider/tests/: README.md  __init__.py  test_base.py  test_config.py  test_litellm_wrapper.py  test_providers.py  test_registry.py  test_utils.py
_dev/model-trainer/: README.md  api_service.py  pyproject.toml  run_tests.sh
_dev/model-trainer/examples/: basic_usage.py  integration_example.py
_dev/model-trainer/src/model_trainer/: __init__.py  dataset_prep.py  metrics.py  trainer.py  versioning.py
_dev/model-trainer/tests/: __init__.py  test_dataset_prep.py  test_metrics.py  test_trainer.py  test_versioning.py
_dev/monitoring/: .gitignore  APPLY_DASHBOARD_FIX.md  FIX_DASHBOARDS.md  FIX_DATASOURCE_PROVISIONING_ERROR.md  FIX_LOGS.md  FIX_LOKI_DATASOURCE.md  GRAFANA_PORT_3000_FIX.md  GRAFANA_SLOW_START.md  IMPLEMENTATION_SUMMARY.md  MIGRATION.md  MISSING_RESOURCES_FIX.md  README.md  TEST_SETUP.md  api_service.py  apply-fix.sh  bootstrap-monitoring.sh  check-grafana-ports.sh  check-grafana-status.sh  check-loki-datasource.sh  config.yml  create-datasources.sh  diagnose-grafana.sh  docker-compose.yml  fix-dashboards.sh  fix-datasource-uids.sh  fix-grafana-port.sh  fix-loki-datasource.sh  generate-promtail-config.py  generate-volumes.sh  loki-config.yml  promtail-config.yml  pyproject.toml  restart-all-monitoring.sh  restart-grafana-now.sh  restart-grafana.sh  start-monitoring.sh  update-datasource-uids.sh  verify-monitoring.sh
_dev/monitoring/grafana/dashboards/: data-retriever.json  data-store.json  format-converter.json  overview.json  (+7 more)
_dev/monitoring/prometheus/: prometheus.yml
_dev/prompt-manager/: .dockerignore  .gitignore  ARCHITECTURE.md  COLIMA_SETUP.md  COST_ANALYSIS.md  DASHBOARD_FIX_EXPLANATION.md  DASHBOARD_NO_DATA_FIX.md  DOCKER_SETUP.md  EXAMPLE_USAGE.md  FIX_STALE_DATA.md  GRAFANA_FINAL_FIX.md  GRAFANA_GUIDE.md  GRAFANA_TROUBLESHOOTING.md  IMPLEMENTATION_SUMMARY.md  IMPORT_DASHBOARD.md  JSON_TEMPLATES_GUIDE.md  LIVE_TESTING_GUIDE.md  LOGGING_GUIDE.md  OLD_MONITORING_CLEANUP.md  PROMETHEUS_GRAFANA_SETUP.md  PROMETHEUS_QUERIES.md  QUICK_START.md  QUICK_START_MICROSERVICES.md  README.md  SECURITY_MIDDLEWARE.md  TESTING_ASSESSMENT.md  TEST_RESULTS.md  TIMEZONE_FIX.md  TOKEN_TRACKING_GUIDE.md  api_service.py  app_with_metrics.py  cleanup-old-monitoring.sh  example.py  example_json_template.py  example_logging.py  example_output.md  example_real_usage.py  example_token_tracking.py  pyproject.toml  start-services.sh  (+2 more)
_dev/prompt-manager/express-app/: README.md  jest.config.js  package-lock.json  package.json  server.js
_dev/prompt-manager/tests/: test_api_service.py  test_json_template.py  test_prompt_manager.py  test_token_tracker.py
_dev/prompt-security/: README.md  pyproject.toml
_dev/prompt-security/tests/: __init__.py  test_security_module.py
_dev/stock-miniapp/api/: monitoring_config.yaml  orchestrator.py  orchestrator_service.py  pyproject.toml  run_orchestrator.sh
_dev/test-agent/: .gitignore  ENHANCEMENTS.md  README.md  api_service.py  pyproject.toml  run_tests.sh
_dev/test-agent/examples/: README.md  api_usage_demo.py  basic_usage.py  ci_cd_integration.md  comprehensive_analysis.py  enhanced_generation.py
_dev/test-agent/tests/: __init__.py  test_agent.py  test_coverage.py  test_discovery.py  test_generator_enhanced.py  test_runner.py
_dev/test-agent/tools/: README.md  dashboard.py
(+127 files in other folders)
