[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-miniapp-orchestrator"
version = "0.1.0"
description = "Orchestrator service for stock mini-app prompt flow"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[tool.setuptools]
py-modules = ["orchestrator", "orchestrator_service"]

